--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
   from = "/*"
   to = "/status/404.html"
   status = 404
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Content-Security-Policy-Report-Only = "default-src 'none'; form-action 'none'; frame-ancestors 'none'; report-uri https://person.report-uri.com/r/d/csp/wizard"
