--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,10 @@
 [[redirects]]
-  from = "/*"
-  to = "/status/404.html"
-  status = 404
-
-[[redirects]]
   from = "/use"
   to = "/status/maintenance"
   status = 302
+  force = true
+
+[[redirects]]
+  from = "/*"
+  to = "/status/404.html"
+  status = 404
