--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
   from = "/*"
   to = "/status/404/"
   status = 404
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Permissions-Policy = "interest-cohort=()"
